--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© 2020 Shah Alizada Website.</p>
+    <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
+    <a class="footer-link" href="https://facebook.com/">Facebook</a>
+    <a class="footer-link" href="https://shahalizada.github.io/Mypersonalsite/">Website</a>
+    <p class="copyright">© 2020 Shah Alizada @ Github site</p>
   </div>
 
 
